added img rendering and counter

--- a/index.html
+++ b/index.html
@@ -9,19 +9,46 @@
   <body>
     <header>
       <h1>Bus-Mall</h1>
-      <aside id="result">
-
-      </aside>
+     
     </header>
     <main>
-      <section id="images">
-
-
+      <aside>
+        <ul id ="result">
+          <li>bag : 0</li>
+          <li>banana : 0</li>
+          <li>bathroom : 0</li>
+          <li>boots : 0</li>
+          <li>breakfast : 0</li>
+          <li>bubblegum : 0</li>
+          <li>chair : 0</li>
+          <li>cthulhu : 0</li>
+          <li>dog-duck : 0</li>
+          <li>dragon : 0</li>
+          <li>pen : 0</li>
+          <li>pet-sweep : 0</li>
+          <li>scissors : 0</li>
+          <li>shark : 0</li>
+          <li>sweep : 0</li>
+          <li>tauntaun : 0</li>
+          <li>unicorn : 0</li>
+          <li>water-can : 0</li>
+          <li>wine-glass : 0</li>
+          <li>wireframe : 0</li>          
+        </ul>
+      </aside>
+      <section id="products">
+        <img id="product1" src="" alt="">
+        <h2 id="product1h2"></h2>
+        <img id="product2" src="" alt="">
+        <h2 id="product2h2"></h2>
+        <img id="product3" src="" alt="">
+        <h2 id="product3h2"></h2>
       </section>
       <article>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Atque similique voluptas voluptatem est, quis natus officiis reiciendis suscipit ullam inventore mollitia sunt rerum illum enim sequi asperiores eveniet aut quibusdam.</article>
     </main>
     <footer>
       <h2>Bus Mall</h2>
     </footer>
+    <script src="app.js"></script>
   </body>
 </html>
