--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
           <li>wireframe : 0</li>          
         </ul>
       </aside>
+      <section><canvas id="graph"></canvas></section>
       <section id="products">
         <img id="product1" src="" alt="">
         <h2 id="product1h2"></h2>
@@ -49,6 +50,7 @@
     <footer>
       <h2>Bus Mall</h2>
     </footer>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/chart.js@3.4.1/dist/chart.min.js"></script>
     <script src="app.js"></script>
-  </body>
+    </body>
 </html>
