added graph and basic css

--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
      
     </header>
     <main>
-      <aside>
+      <section id="top">
+      <!-- <aside>
         <ul id ="result">
           <li>bag : 0</li>
           <li>banana : 0</li>
@@ -35,8 +36,7 @@
           <li>wine-glass : 0</li>
           <li>wireframe : 0</li>          
         </ul>
-      </aside>
-      <section><canvas id="graph"></canvas></section>
+      </aside> -->
       <section id="products">
         <img id="product1" src="" alt="">
         <h2 id="product1h2"></h2>
@@ -45,6 +45,8 @@
         <img id="product3" src="" alt="">
         <h2 id="product3h2"></h2>
       </section>
+    </section>
+    <section id="chart"><canvas id="graph"></canvas></section>
       <article>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Atque similique voluptas voluptatem est, quis natus officiis reiciendis suscipit ullam inventore mollitia sunt rerum illum enim sequi asperiores eveniet aut quibusdam.</article>
     </main>
     <footer>
