added graph and basic css

--- a/index.html
+++ b/index.html
@@ -46,8 +46,9 @@
         <h2 id="product3h2"></h2>
       </section>
     </section>
-    <section id="chart"><canvas id="graph"></canvas></section>
+    <section id="chart"><canvas id="graph"></canvas>
       <article>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Atque similique voluptas voluptatem est, quis natus officiis reiciendis suscipit ullam inventore mollitia sunt rerum illum enim sequi asperiores eveniet aut quibusdam.</article>
+      </section>
     </main>
     <footer>
       <h2>Bus Mall</h2>
