fixed list re-running issue

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     </header>
     <main>
       <section id="top">
-      <!-- <aside>
+      <aside>
         <ul id ="result">
-          <li>bag : 0</li>
+          <!-- <li>bag : 0</li>
           <li>banana : 0</li>
           <li>bathroom : 0</li>
           <li>boots : 0</li>
@@ -34,9 +34,9 @@
           <li>unicorn : 0</li>
           <li>water-can : 0</li>
           <li>wine-glass : 0</li>
-          <li>wireframe : 0</li>          
+          <li>wireframe : 0</li>           -->
         </ul>
-      </aside> -->
+      </aside>
       <section id="products">
         <img id="product1" src="" alt="">
         <h2 id="product1h2"></h2>
