--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <main>
       <section id="top">
       <aside>
-        <ul id ="result">
+        <ol id ="result" type='i'>
           <!-- <li>bag : 0</li>
           <li>banana : 0</li>
           <li>bathroom : 0</li>
@@ -35,8 +35,9 @@
           <li>water-can : 0</li>
           <li>wine-glass : 0</li>
           <li>wireframe : 0</li>           -->
-        </ul>
+        </ol>
       </aside>
+      <section id="imggraph">
       <section id="products">
         <img id="product1" src="" alt="">
         <h2 id="product1h2"></h2>
@@ -45,11 +46,13 @@
         <img id="product3" src="" alt="">
         <h2 id="product3h2"></h2>
       </section>
-    </section>
+    <!-- </section> -->
     <section id="chart"><canvas id="graph"></canvas>
       <article>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Atque similique voluptas voluptatem est, quis natus officiis reiciendis suscipit ullam inventore mollitia sunt rerum illum enim sequi asperiores eveniet aut quibusdam.</article>
       </section>
-    </main>
+    </section>
+    </section>
+      </main>
     <footer>
       <h2>Bus Mall</h2>
     </footer>
